# pantin

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  rustfmt.toml
app/: Cargo.toml
app/src/firefox/: browser.rs
app/src/firefox/marionette/: client.rs  handshake.rs  webdriver.rs
crates/browser/: Cargo.toml  README.md
crates/browser/src/: browser.rs  lib.rs  profile.rs  user.d.ts  user.js  userChrome.css
crates/browser/src/firefox/: browser.rs
crates/browser/src/firefox/marionette/: handshake.rs  request.rs
crates/browser/src/marionette/: client.rs  handshake.rs  request.rs  response.rs
crates/derive/: Cargo.toml  README.md
crates/derive/src/: lib.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/lib/src/firefox/: browser.rs
crates/lib/src/firefox/marionette/: command.rs
crates/macros/: Cargo.toml
crates/marionette/: Cargo.toml  README.md
crates/marionette/src/: command.rs  handshake.rs  lib.rs  marionette.rs  request.rs  response.rs  webdriver.rs
crates/process/: Cargo.toml  README.md
crates/process/src/: lib.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: api.rs  browser_pool.rs  cli.rs  logger.rs  main.rs  routes.rs  server.rs  signal.rs  state.rs
lib/: Cargo.toml
lib/src/: firefox.rs
lib/src/firefox/marionette/: client.rs
macros/: Cargo.toml
macros/src/: lib.rs
server/: Cargo.toml
src/: firefox.rs  lib.rs  main.rs  process.rs  signal.rs  tracing.rs
src/firefox/: browser.rs  marionette.rs  profile.rs  user.js
src/firefox/marionette/: client.rs  command.rs  handshake.rs  message.rs  request.rs  response.rs  webdriver.rs
