[package]
name = "pantin"
description = "A screenshot microservice"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/skarab42/pantin"
keywords = ["firefox", "marionette", "screenshot", "microservice"]
categories = ["multimedia::images", "web-programming::http-server"]

[[bin]]
name = "pantin"
path = "src/main.rs"

[lib]
name = "pantin_lib"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6.3"
thiserror = "2.0.11"
tracing = "0.1.41"

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]
