[workspace]
resolver = "2"
members = [
    "crates/browser",
    "crates/derive",
    "crates/marionette",
    "crates/process",
    "crates/server"
]

[workspace.dependencies]
pantin_browser = { path = "crates/browser" }
pantin_derive = { path = "crates/derive" }
pantin_marionette = { path = "crates/marionette" }
pantin_process = { path = "crates/process" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.45.0", features = ["macros", "io-util", "signal", "rt-multi-thread", "fs", "net", "time"] }
tracing = "0.1.41"
tracing-test = "0.2.5"
url = "2.5.4"
uuid = { version = "1.13.1", features = ["v4"] }
