[package]
name = "pantin_browser"
description = "Patin library"
readme = "../../README.md"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/skarab42/pantin"
keywords = ["firefox", "marionette", "screenshot", "microservice"]
categories = ["multimedia::images", "web-programming::http-server"]

[lib]
name = "pantin_browser"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
temp-dir = "0.1.14"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["fs", "net"] }
tracing = "0.1.41"
uuid = { version = "1.13.1", features = ["v4"] }

# workspace dependencies
pantin_marionette = { path = "../marionette" }
pantin_process = { path = "../process" }
