[package]
name = "pantin_browser"
description = "Patin library"
readme = "./README.md"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/skarab42/pantin"
keywords = ["firefox", "marionette", "screenshot", "microservice"]
categories = ["multimedia::images", "web-programming::http-server"]

[lib]
name = "pantin_browser"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
pantin_marionette.workspace = true
pantin_process.workspace = true
serde_json.workspace = true
temp-dir = "0.1.14"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
image = "0.25.5"
tracing-test.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
