[package]
name = "pantin_macros"
description = "Pantin macros"
readme = "../../README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/skarab42/pantin"
keywords = ["firefox", "marionette", "screenshot", "microservice"]
categories = ["multimedia::images", "web-programming::http-server"]

[lib]
proc-macro = true
crate-type = ["proc-macro"]

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"
