[package]
name = "pantin_marionette"
description = "Patin marionette"
readme = "../../README.md"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/skarab42/pantin"
keywords = ["firefox", "marionette", "screenshot", "microservice"]
categories = ["multimedia::images", "web-programming::http-server"]

[lib]
name = "pantin_marionette"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["io-util", "net", "time"] }
tracing = "0.1.41"

# workspace dependencies
pantin_derive = { path = "../derive" }
