[package]
name = "pantin_process"
description = "Spawn process and kill on drop"
readme = "../../README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/skarab42/pantin"
keywords = ["firefox", "marionette", "screenshot", "microservice"]
categories = ["multimedia::images", "web-programming::http-server"]

[lib]
name = "pantin_process"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.11"
tracing = "0.1.41"

[dependencies.process-wrap]
version = "8.2.0"
features = ["tokio1"]

[dependencies.tokio]
version = "1.43.0"
features = ["fs", "macros", "net", "rt-multi-thread", "signal", "time"]
