[package]
name = "pantin_process"
description = "Pantin process"
readme = "../../README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/skarab42/pantin"
keywords = ["firefox", "marionette", "screenshot", "microservice"]
categories = ["multimedia::images", "web-programming::http-server"]

[lib]
name = "pantin_process"
path = "src/lib.rs"

[dependencies]
process-wrap = { version = "8.2.0", features = ["tokio1"] }
thiserror = "2.0.11"
tokio = "1.43.0"
tracing = "0.1.41"
