[package]
name = "pantin_process"
description = "Pantin process"
readme = "./README.md"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/skarab42/pantin"
keywords = ["firefox", "marionette", "screenshot", "microservice"]
categories = ["multimedia::images", "web-programming::http-server"]

[lib]
name = "pantin_process"
path = "src/lib.rs"

[dependencies]
process-wrap = { version = "8.2.0", features = ["tokio1"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-test.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
